[tool.poetry]
name = "recipes-api"
version = "0.1.0"
description = "A short description of my project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14"  # Add this line
llama-index-core = "^0.12.36"
llama-index-llms-openai = "^0.3.40"
pygithub = "^2.6.1"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"  # For coverage support in pytest
coverage = "^7.0"    # Standalone coverage tool

#[tool.poetry.virtualenvs]
#in-project = true
